# vfatqc-python-scripts

./: .gitignore  .gitmodules  .travis.yml  Datafiles.txt  GEMDAQTestSuite.py  MANIFEST.in  Makefile  MaskChannels.py  Plots_Scurve_iEta.py  ProduceRootFiles.py  README.md  ThreshScan.py  TrimDACfiles.txt  VFATSCurveTools.py  __init__.py  anaAllChambers.py  anaAllChambersThresh.py  anaInfo.py  ana_scans.py  anaoptions.py  buildConfig.py  chamberInfo.py  checkSbitMappingAndRate.py  confAllChambers.py  confChamber.py  dacScanV3.py  fastLatency.py  getCalInfoFromDB.py  iterativeTrim.py  monitorTemperatures.py  procScurves.py  pythonScript.py  pythonScript_904.py  pythonScript_ShorterDLYLessEvt.py  qcoptions.py  qcutilities.py  read_and_plot.py  read_and_plot_all.py  requirements-dev.txt  requirements.txt  (+25 more)
.ci/: docker.sh  test_on_docker.sh  travis.sh
.github/: CONTRIBUTING.md  labeler.yml  move.yml
ForTIF/: TrimDACfiles.txt
VFAT2s_DataBase/: 2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_0_ID_0xff18  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_10_ID_0xf99b  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_11_ID_0xff24  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_12_ID_0xfa28  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_13_ID_0xff48  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_14_ID_0xffec  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_15_ID_0xffe7  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_16_ID_0xfa2c  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_17_ID_0xffdc  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_19_ID_0xf75b  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_1_ID_0xff60  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_20_ID_0xfa20  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_21_ID_0xf747  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_22_ID_0xfffc  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_23_ID_0xff83  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_2_ID_0xfa34  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_4_ID_0xfa40  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_5_ID_0xff87  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_6_ID_0xfa17  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_7_ID_0xffcb  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_8_ID_0xff2c  2016_08_12_QC3_Data_GLIB_IP_192_168_0_171_VFAT2_9_ID_0xff40  2016_08_12_QC3_SCurve_by_channel_VFAT2_0_ID_0xff18  2016_08_12_QC3_SCurve_by_channel_VFAT2_10_ID_0xf99b  2016_08_12_QC3_SCurve_by_channel_VFAT2_11_ID_0xff24  2016_08_12_QC3_SCurve_by_channel_VFAT2_12_ID_0xfa28  2016_08_12_QC3_SCurve_by_channel_VFAT2_13_ID_0xff48  2016_08_12_QC3_SCurve_by_channel_VFAT2_14_ID_0xffec  2016_08_12_QC3_SCurve_by_channel_VFAT2_15_ID_0xffe7  (+1728 more)
pkg/: installrpm.sh  setup.cfg  setup.py
(+389 files in other folders)
