[metadata]
name = gempython_vfatcq
# name = vfatcq
author = GEM Online Systems Group
author_email = cms-gem-online-sw@cern.ch
summary = __summary__
license = MIT
description-file = gempython/vfatcq/README.md
home-page = https://cms-gem-daq-project.github.io/gem-plotting-tools
project_urls =
    Documentation = https://cms-gem-daq-project.github.io/gem-plotting-tools
    Source Code   = https://github.com/cms-gem-daq-project/gem-plotting-tools
    Bug Tracker   = https://github.com/cms-gem-daq-project/gem-plotting-tools/issues
requires-python = >=2.6
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Data Acquisition
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python [files]
# scripts = gempython/vfatcq/bin/*.py

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
namespace_packages =
    gempython

packages =
#    vfatcq
     'gempython.vfatcq'
     'gempython.vfatcq.macros'

data_files =
    /opt/cmsgemos/bin = gempython/vfatcq/bin/*.py

[entry_points]

[backwards_compat]

[pbr]

[pycodestyle]
exclude=build,lib,.tox,third,*.egg,docs,packages,.eggs
